# ft_ality_bonus

./: .gitignore  Makefile  README.md  ft-ality-bonus.cabal  ft_ality_bonus.cabal  graphite.cabal
app/: Main.hs
srcs/: Common.hs  main.hs
