cabal-version: 3.0
name:          ft-ality-bonus
version:       1
build-type:    Simple

common warnings
  ghc-options: -Wall

executable ft_ality_bonus
  import:           warnings
  main-is:          main.hs
  other-modules:    Common
  hs-source-dirs:   srcs
  default-language: Haskell2010
  build-depends:
    , base
    , sdl2
    , sdl2-image
    , text
