cabal-version: 3.0
name:          ft-ality-bonus
version:       0.1.0.0
author:        Axel Brisse
maintainer:    axel.brisse@gmail.com
build-type:    Simple

common warnings
  ghc-options: -Wall

executable ft_ality_bonus
  import:           warnings
  main-is:          Main.hs
  build-depends:
    , base      ^>=4.17.2.1
    , graphite  ^>=0.10.0.1

  hs-source-dirs:   app
  default-language: Haskell2010
